#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-05-01
2013-02-06 Andy Salnikov
- removed _import_array() from generated code

Tag: V00-05-00
2013-02-06 Andy Salnikov
- big changes in python generator, see details in psddl_python

Tag: V00-04-01
2013-02-05 Andy Salnikov
- update DdlPsanaDoc for ndarray return types

Tag: V00-04-00
2013-01-31 Andy Salnikov
- changes in python getter interfaces, update generator

Tag: V00-03-00
2013-01-30 Andy Salnikov
- now returning ndarray<const T,N> for array data

Tag: V00-02-11
2013-01-28 Andy Salnikov
- updatges related to ndarray constness change

Tag: V00-02-10
2013-01-26 Andy Salnikov
- parameterize name of the output file in DdlPythonInterfaces

Tag: andy-20121219-01
2012-12-19 Andy Salnikov
- some progress with HDF5

Tag: V00-02-09
2012-12-12 Andy Salnikov
- few improvements to HDF5 generator

Tag: V00-02-08
2012-10-10 Andy Salnikov
- adding fix for padding after last attribute

Tag: V00-02-07
2012-09-24 Andy Salnikov
- DdlPythonInterfaces: rearrange includes to get rid of the warnings
  (Python.h has to be included first)

Tag: V00-02-06
2012-09-11 Andy Salnikov
- DdlPythonInterfaces: generated stuff goes to a separate namespace

Tag: V00-02-05
2012-07-27 Andy Salnikov
- XmlReader: elementTree in 2.7 comes from xml package, make imports
  work both in 2.4 and 2.5+

Tag: V00-02-04
2012-07-08 Joseph S. Barrera III
- Added psana python support in new file DdlPythonInterfaces.py.
- Removed psana python support from DdlPsanaInterfaces.py and CppTypeCodegen.py.

Tag: V00-02-03
2012-05-07 Andy Salnikov
- fix for missing include file causing psddlc crash with incorrect
  dignostics

Tag: V00-02-02